...
"Offline Mode" = "Offline Mode";

/* No comment provided by engineer. */
"Omit" = "Omit";

/* Don't set a profile picture during onboarding. */
"Omit Portrait" = "Omit Portrait";

/* Trait */
"opennessToChange" = "Openness to Change";

/* TraitDescription */
"opennessToChangeDescription" = "Are new environments not a big deal for you?";
...
"Tap to go offline" = "Tap to go offline";

/* Subhead of the offline mode placeholder shown in browse view when Bluetooth is on. */
"Tap to go online" = "Tap to go online";

/* Heading of onboarding description paragraph. */
"Temporary" = "Temporary";

/* Content of onboarding description paragraph. */
"Temporary content" = "When you meet a person, you might remember him or her – or not. Peeree will not remember anyone, except for whether you found him or her interesting.";

/* Colored link name in button text in onboarding */
"Terms of Use" = "Terms of Use";
...
"Pinboard" = "Pinboard";

"%@ is not yet ready to chat." = "%@ is not yet ready to chat.";

"To ensure the confidentiality of your messages, chat is only available after %@ opened the app." = "To ensure the confidentiality of your messages, chat is only available after %@ opened the app.";

"PortraitPlaceholder" = "PortraitPlaceholder";

"Biography" = "Biography";

"Birthday" = "Birthday";

"Female" = "Female";

"Male" = "Male";

"Queer" = "Queer";

"Gender" = "Gender";

"Show Age on Profile" = "Show Age on Profile";

"Name" = "Name";

"Preview" = "Preview";

"Privacy Policy" = "Privacy Policy";

"Website" = "Website";
...
