...
                    <view key="view" contentMode="scaleToFill" id="GM2-V1-SU7" customClass="RootView" customModule="Peeree" customModuleProvider="target">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b8Y-IF-X4f">
                                <rect key="frame" x="252" y="562" width="96" height="30"/>
                                <state key="normal" title="Sounds great!">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <segue destination="hfq-X5-JCR" kind="unwind" unwindAction="unwindToOnboardingViewController:" id="RgC-20-rSl"/>
                                </connections>
                            </button>
...
                                    <segue destination="HjA-eK-uZw" kind="showDetail" identifier="finishOnboardingSegue" action="showViewController:sender:" id="Nle-Q1-I6R"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yag-kE-4K4">
                                <rect key="frame" x="190" y="100" width="219" height="30"/>
                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                <state key="normal" title="What do you want with my data?"/>
                                <connections>
                                    <segue destination="ZHr-Cu-27s" kind="show" identifier="" id="jir-RQ-5Yf"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Setup your basic data" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JLo-5M-7YM">
                                <rect key="frame" x="173" y="60" width="254.5" height="32.5"/>
...
